syntax = "proto3";

package mereb;

service CommunicationService {
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 2;
}